# turtlebot4_perception_control

./: .gitignore
enpm673_final_proj/: CMakeLists.txt  config.ini  package.xml
enpm673_final_proj/enpm673_module/: a.py  config.ini  enpm673_final_proj.py  horizon_detection.py  obstacle_detection.py  paper_orientation_detection.py  preprocessing.py  stop_sign_detection.py
enpm673_final_proj/models/aruco_marker/: model.sdf
enpm673_final_proj/models/lane_markings/: model.sdf
enpm673_final_proj/scripts/: enpm673_final_proj_main.py
